--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GymApp">
         <activity
-            android:name=".MainActivity" />
+            android:name=".ExerciseActivity"
+            android:exported="false" />
+        <activity android:name=".MainActivity" />
 
         <receiver
             android:name=".Notification"
@@ -28,10 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".NotificationActivity">
-
-        </activity>
+        <activity android:name=".NotificationActivity"></activity>
     </application>
 
 </manifest>
