--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GymApp">
         <activity
-            android:name=".ExerciseActivity"
+            android:name=".Activities.ExerciseActivity"
             android:exported="false" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Activities.MainActivity" />
+
 
         <receiver
-            android:name=".Notification"
+            android:name=".Activities.Notification"
             android:enabled="true" />
 
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".Activities.SplashScreenActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
@@ -30,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".Activities.NotificationActivity"></activity>
     </application>
 
 </manifest>
